fixed pages and calcucating

--- a/planner/templates/planner/add_to_watchlist.html
+++ b/planner/templates/planner/add_to_watchlist.html
@@ -1,4 +1,4 @@
-{% extends 'planner/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <h2>Добавить "{{ series.title }}" в список</h2>
