--- a/planner/templates/planner/update_plan.html
+++ b/planner/templates/planner/update_plan.html
@@ -1,4 +1,4 @@
-{% extends 'planner/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <h2>Редактировать план: {{ plan.series.title }}</h2>
