--- a/planner/templates/planner/analytics.html
+++ b/planner/templates/planner/analytics.html
@@ -1,4 +1,4 @@
-{% extends 'planner/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Аналитика просмотра - SeriesPlanner{% endblock %}
 
